compiled/tesoro/manifests/tesoro-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: tesoro
  name: tesoro
