compiled/tesoro/manifests/tesoro-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: tesoro
  name: tesoro
  namespace: tesoro
spec:
  ports:
    - name: tesoro-metrics
      port: 9095
      protocol: TCP
      targetPort: tesoro-metrics
  selector:
    name: tesoro
  sessionAffinity: None
  type: ClusterIP
