compiled/tesoro/manifests/tesoro-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    name: tesoro
  name: tesoro
  namespace: tesoro
spec:
  replicas: 1
  selector:
    matchLabels:
      name: tesoro
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: tesoro
    spec:
      containers:
        - args:
            - --ca-file=/certs/cacert.pem
            - --cert-file=/certs/cert.pem
            - --key-file=/certs/cert.key
            - --port=443
          image: kapicorp/tesoro
          imagePullPolicy: IfNotPresent
          name: tesoro
          ports:
            - containerPort: 443
              name: tesoro-api
              protocol: TCP
            - containerPort: 9095
              name: tesoro-metrics
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
          volumeMounts:
            - mountPath: /certs
              name: secrets
              readOnly: true
      restartPolicy: Always
      serviceAccountName: tesoro
      terminationGracePeriodSeconds: 30
      volumes:
        - name: secrets
          secret:
            defaultMode: 420
            secretName: tesoro
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: tesoro
  name: tesoro
  namespace: tesoro
spec:
  ports:
    - name: tesoro-api
      port: 443
      protocol: TCP
      targetPort: tesoro-api
    - name: tesoro-metrics
      port: 9095
      protocol: TCP
      targetPort: tesoro-metrics
  selector:
    name: tesoro
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    name: tesoro
  name: tesoro
webhooks:
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUV1akNDQXFJQ0NRRDZIdzJDZld6ZVp6QU5CZ2txaGtpRzl3MEJBUXNGQURBZk1SMHdHd1lEVlFRRERCUkQKUVMxMFpYTnZjbTh1ZEdWemIzSnZMbk4yWXpBZUZ3MHlNREV4TWpFeU1ERTVNemhhRncweU16QTVNVEV5TURFNQpNemhhTUI4eEhUQWJCZ05WQkFNTUZFTkJMWFJsYzI5eWJ5NTBaWE52Y204dWMzWmpNSUlDSWpBTkJna3Foa2lHCjl3MEJBUUVGQUFPQ0FnOEFNSUlDQ2dLQ0FnRUEzbVlZNXIvTVYrSU9hMy9DZGxuRGVrdk9yQnVpeUd5MXUwZUYKOHU2RGQzdkNRcnp3MytLUmZrSXlHOW1lcDl3NW16bm5IMjdDZzVDN0t5Y040NVRaTnE3cHFESmhHVXVMWC9uRwpqNmxvM01qdnVp [...]
      service:
        name: tesoro
        namespace: tesoro
        path: /mutate
    failurePolicy: Fail
    name: tesoro.kapicorp.com
    objectSelector:
      matchLabels:
        tesoro.kapicorp.com: enabled
    rules:
      - apiGroups:
          - ''
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - '*'
      - apiGroups:
          - apps
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
